kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-example-deployment
  namespace: test
  labels:
    app: hpa-example
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpa-example
      env: test
  template:
    metadata:
      labels:
        app: hpa-example
        env: test
    spec:
      containers:
        - name: hpa-example
          image: prima101112/hpa-example:v0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "32Mi"
              cpu: "50m"
      restartPolicy: Always
