kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpa-example-service
  namespace: test
spec:
  type: LoadBalancer
  selector:
    app: hpa-example
    env: test
  ports:
  - port: 80
    name: apps
    targetPort: 8080
