kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hpa-ingress
  namespace: test
spec:
  rules:
  - host: hpa-example.com
    http:
      paths:
      - backend:
          serviceName: hpa-example-service
          servicePort: 8080
